--- a/style.css
+++ b/style.css
@@ -3,10 +3,63 @@
 *::after {
   box-sizing: border-box;
 }
+html {
+  font-size: 10px;
+}
+body {
+  min-width: 1020px;
+  font-size: 1.8rem;
+  line-height: 1.6;
+  font-family: Roboto, Avenir, sans-serif;
+}
+a {
+  text-decoration: none;
+}
 
 /* HEADER */
 .header {
   background: yellow;
+  height: 72px;
+  padding: 15px 0 4px;
+}
+.container {
+  max-width: 1400px;
+  background: black;
+  margin: 0 auto 0 auto;
+  padding: 0 20px;
+  position: relative;
+}
+
+.logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding-left: inherit;
+}
+
+.nav {
+  text-align: right;
+}
+.list {
+  margin: 0;
+  font-size: 0;
+}
+.listitem {
+  font-size: 1.3rem;
+  display: inline-block;
+  font-weight: 700;
+}
+
+.listitem > a {
+  color: white;
+  display: block;
+  padding: 10px;
+  text-transform: uppercase;
+}
+
+.listitem > a:hover {
+  color: #c9f0dd;
 }
 
 /* MAIN */
