--- a/style.css
+++ b/style.css
@@ -18,16 +18,22 @@ a {
 
 /* HEADER */
 .header {
-  background: yellow;
+  background: #1f4533;
   height: 72px;
   padding: 15px 0 4px;
 }
-.container {
+.container,
+.container-float {
   max-width: 1400px;
-  background: black;
   margin: 0 auto 0 auto;
   padding: 0 20px;
   position: relative;
+}
+
+.container-float::after {
+  display: block;
+  content: "";
+  clear: both;
 }
 
 .logo {
@@ -63,11 +69,32 @@ a {
 }
 
 /* MAIN */
-.main {
-  background: lime;
-}
+
 .hero-section {
-  background: aqua;
+  text-align: center;
+  padding: 50px 0;
+  border-bottom: 1px solid #cfe3dc;
+}
+.intro-desc {
+  margin: 40px auto 50px;
+  width: 700px;
+  font-weight: 300;
+  font-size: 3.6rem;
+  line-height: 1.3;
+}
+
+.cta {
+  color: white;
+  width: 300px;
+  margin: 0 auto 60px;
+  display: block;
+  padding: 20px 50px;
+  border-radius: 8px;
+  background: #44b78b;
+}
+
+.cta:hover {
+  background: #51be95;
 }
 .main-content {
   background: blue;
@@ -89,4 +116,5 @@ a {
 }
 .footer {
   background: purple;
+  clear: both;
 }
